--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,12 +42,15 @@
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
-               android:layout_height="?attr/actionBarSize"
+               android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+           <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
 
+               android:theme="@style/Theme.AppCompat.Light.NoActionBar"-->
+           <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light" -->
            <FrameLayout
                android:id="@+id/main_frame"
                android:layout_width="match_parent"
